samples/_failures_safe/1761489338_8ea24b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee5de45b.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_ee5de45b.c:166:5: error: expected expression at end of input
  166 |     if (input == NULL ||
      |     ^~
./samples/SAFE/__tmp_ee5de45b.c:166:5: error: expected declaration or statement at end of input
